<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.camunda</groupId>
    <artifactId>camunda-release-parent</artifactId>
    <version>4.1.1</version>
    <!-- do not remove empty tag - http://jira.codehaus.org/browse/MNG-4687 -->
    <relativePath />
  </parent>

  <groupId>io.camunda</groupId>
  <artifactId>camunda-7-to-8-migration-tooling-root</artifactId>
  <version>0.3.0-SNAPSHOT</version>

  <packaging>pom</packaging>

  <name>Camunda 7 to 8 Migration Tooling - Root</name>

  <licenses>
    <license>
      <name>Camunda License v1.0</name>
    </license>
  </licenses>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <version.java>21</version.java>

    <version.camunda-7>7.24.5-SNAPSHOT</version.camunda-7>
    <version.camunda-8>8.9.0-SNAPSHOT</version.camunda-8>
    <version.elasticsearch>8.19.6</version.elasticsearch>
    <version.spring-boot>4.0.4</version.spring-boot>
    <version.assertj>3.27.7</version.assertj>
    <version.junit.jupiter>6.0.3</version.junit.jupiter>
    <version.h2>2.4.240</version.h2>
    <version.guava>33.5.0-jre</version.guava>
    <version.errorprone>2.48.0</version.errorprone>
    <version.node>v20.18.1</version.node>
    <version.npm>10.8.2</version.npm>
    <plugin.version.compiler>3.15.0</plugin.version.compiler>
    <plugin.version.nexus-staging>1.7.0</plugin.version.nexus-staging>
    <plugin.version.frontend-maven>2.0.0</plugin.version.frontend-maven>
    <plugin.version.surefire>3.5.5</plugin.version.surefire>
    <plugin.version.failsafe>3.5.5</plugin.version.failsafe>
    <plugin.version.resources>3.4.0</plugin.version.resources>
    <plugin.version.dependency>3.10.0</plugin.version.dependency>

    <url.source>jdbc:h2:~/Downloads/c8_rdbms-source.db;TRACE_LEVEL_FILE=0;DB_CLOSE_ON_EXIT=FALSE</url.source>
    <url.target>jdbc:h2:~/Downloads/c8_rdbms-target.db;TRACE_LEVEL_FILE=0;DB_CLOSE_ON_EXIT=FALSE</url.target>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>

    <nexus.snapshot.repository>https://artifacts.camunda.com/artifactory/zeebe-io-snapshots/</nexus.snapshot.repository>
    <nexus.release.repository>https://artifacts.camunda.com/artifactory/zeebe-io/</nexus.release.repository>
    <central.sonatype.deployment.name>${project.groupId}:${project.artifactId}:${project.version}</central.sonatype.deployment.name>
  </properties>

  <modules>
    <module>code-conversion</module>
    <module>data-migrator</module>
    <module>diagram-converter</module>
  </modules>

  <scm>
    <connection>scm:git:https://${env.GITHUB_TOKEN_USR}:${env.GITHUB_TOKEN_PSW}@github.com/camunda/camunda-7-to-8-migration-tooling
      .git</connection>
    <developerConnection>scm:git:https://${env.GITHUB_TOKEN_USR}:${env.GITHUB_TOKEN_PSW}@github.com/camunda/camunda-7-to-8-migration-tooling.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/camunda/camunda-7-to-8-migration-tooling</url>
  </scm>

  <repositories>
    <repository>
      <id>zeebe-snapshots</id>
      <snapshots />
      <url>https://artifacts.camunda.com/artifactory/zeebe-io-snapshots/</url>
    </repository>
    <repository>
      <id>camunda-bpm-snapshots</id>
      <snapshots />
      <url>https://artifacts.camunda.com/artifactory/camunda-bpm-snapshots/</url>
    </repository>
    <repository>
      <id>camunda-bpm-ee-snapshots</id>
      <snapshots />
      <url>https://artifacts.camunda.com/artifactory/camunda-bpm-ee-snapshots/</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${version.junit.jupiter}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>5.0.0</version>
          <configuration>
            <mapping>
              <java>SLASHSTAR_STYLE</java>
            </mapping>
            <licenseSets>
              <licenseSet>
                <includes>
                  <include>**/*.java</include>
                </includes>
              </licenseSet>
            </licenseSets>
          </configuration>
        </plugin>
        <!-- MAVEN COMPILER -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${plugin.version.compiler}</version>
        </plugin>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>${plugin.version.nexus-staging}</version>
          <configuration>
            <stagingProgressTimeoutMinutes>40</stagingProgressTimeoutMinutes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <doclint>none</doclint>
          </configuration>
        </plugin>
        <!-- Frontend Maven Plugin - shared configuration for Node.js/npm builds -->
        <plugin>
          <groupId>com.github.eirslett</groupId>
          <artifactId>frontend-maven-plugin</artifactId>
          <version>${plugin.version.frontend-maven}</version>
          <configuration>
            <nodeVersion>${version.node}</nodeVersion>
            <npmVersion>${version.npm}</npmVersion>
          </configuration>
        </plugin>
        <!-- Maven Surefire Plugin - unit tests -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${plugin.version.surefire}</version>
        </plugin>
        <!-- Maven Failsafe Plugin - integration tests -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${plugin.version.failsafe}</version>
        </plugin>
        <!-- Maven Resources Plugin -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${plugin.version.resources}</version>
        </plugin>
        <!-- Maven Dependency Plugin -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${plugin.version.dependency}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <licenseSets>
            <licenseSet>
              <header>${maven.multiModuleProjectDirectory}/license/header.txt</header>
            </licenseSet>
          </licenseSets>
        </configuration>
        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.7.3</version>
        <configuration combine.children="append">
          <flattenMode>bom</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <goals>
              <goal>flatten</goal>
            </goals>
            <phase>process-resources</phase>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <goals>
              <goal>clean</goal>
            </goals>
            <phase>clean</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
